manifests/activemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq
  namespace: activemq
  labels:
    app: activemq
spec:
  clusterIP: None
  ports:
    - port: 61616
      name: openwire
    - port: 8161
      name: web
  selector:
    app: activemq
